k3s/templates.yaml
# Kubernetes Manifests
# From https://medium.com/@bhuwanmishra_59371/a-comprehensive-guide-to-writing-kubernetes-manifests-from-scratch-4d02f58448ae

# Basic pod
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-app
spec:
  containers:
    - name: my-container
      image: nginx:latest
  ports:
    - containerPort: 80

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
template:
  metadata:
    labels:
      app: my-app
  spec:
    containers:
      - name: my-container
        image: nginx:latest
        ports:
          - containerPort: 80

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      type: ClusterIP


---
# StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-statefulset
spec:
  serviceName: my-service
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
  spec:
    containers:
      - name: my-container
        image: nginx:latest
    volumeMounts:
      - name: my-volume
        mountPath: /usr/share/nginx/html
        volumeClaimTemplates:
          - metadata: null
            name: my-volume
            spec:
              accessModes:
                - ReadWriteOnce
              resources:
                requests:
                  storage: 1Gi

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: myapp.example.com
  http:
    paths:
      - path: /
        pathType: Prefix
  backend:
    service:
      name: my-service
      port:
        number: 80

---
# NetworkPolicy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
spec:
  podSelector:
    matchLabels:
      app: my-app
    policyTypes:
      - Ingress
ingress:
  - from:
      - podSelector:
        matchLabels:
          role: frontend
